[package]
name = "whatevertp"
version = "0.1.0"
authors = ["Andrew Chiw <randomshinichi4869@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tftp_server = "0.0.3"
iron = "0.6.1"
staticfile = "*"
mount = "*"
